--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=javaws
+# Porta del server
+server.port=8080
+
+# Configurazione H2 su file (persistente)
+spring.datasource.url=jdbc:h2:file:./data/db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Dialetto JPA per H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+
+# Disabilita open-in-view (miglior per REST APIs)
+spring.jpa.open-in-view=false
+
+# Abilita console H2 per debug
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
