--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
  	spring.application.name=javaws
 # Porta del server
-server.port=80
+server.port=${PORT:8080}
 
 # Configurazione H2 su file (persistente)
 spring.datasource.url=jdbc:h2:file:./data/db
