--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,20 @@
- 	spring.application.name=javaws
+# Nome dell'applicazione
+spring.application.name=javaws
+
 # Porta del server
 server.port=${PORT:8080}
 
-# Configurazione H2 su file (persistente)
-spring.datasource.url=jdbc:h2:file:./data/db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Configurazione PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+# Legge solo DATABASE_URL
+database.url=${DATABASE_URL}
 
-# Dialetto JPA per H2
-# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Dialetto JPA per PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Strategia di aggiornamento schema
 spring.jpa.hibernate.ddl-auto=update
 
-# Disabilita open-in-view (miglior per REST APIs)
+# Disabilita open-in-view (migliore per REST APIs)
 spring.jpa.open-in-view=false
-
-# Abilita console H2 per debug
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
