--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ server.port=${PORT:8080}
 # Configurazione PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Legge solo DATABASE_URL
+#External
+#database.url=postgresql://postgres:gSzWJeoUtNiMYrvFTmojcAuHtSLftukD@interchange.proxy.rlwy.net:22759/railway
+#Internal
+#database.url=postgresql://postgres:gSzWJeoUtNiMYrvFTmojcAuHtSLftukD@postgres.railway.internal:5432/railway
+#Variable
 database.url=${DATABASE_URL}
 
 
