--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,11 @@ server.port=${PORT:8080}
 spring.datasource.driver-class-name=org.postgresql.Driver
 # Legge solo DATABASE_URL
 #External
-#database.url=postgresql://postgres:gSzWJeoUtNiMYrvFTmojcAuHtSLftukD@interchange.proxy.rlwy.net:22759/railway
+database.url=postgresql://postgres:gSzWJeoUtNiMYrvFTmojcAuHtSLftukD@interchange.proxy.rlwy.net:22759/railway
 #Internal
 #database.url=postgresql://postgres:gSzWJeoUtNiMYrvFTmojcAuHtSLftukD@postgres.railway.internal:5432/railway
 #Variable
-database.url=${DATABASE_URL}
+#database.url=${DATABASE_URL}
 
 
 # Dialetto JPA per PostgreSQL
