--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Disabilita open-in-view (migliore per REST APIs)
 spring.jpa.open-in-view=false
+
+
+jwt.secret=${JWT_SECRET}
+
+jwt.validity=${JWT_VALIDITY}
