--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 database.url=${DATABASE_URL}
 
 
-# Dialetto JPA per PostgreSQL
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Dialetto JPA per PostgreSQL (Non necessario con l'ultima versione di hibernate)
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # Strategia di aggiornamento schema
 spring.jpa.hibernate.ddl-auto=update
