--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ spring.jpa.open-in-view=false
 jwt.secret=${JWT_SECRET}
 
 jwt.validity=${JWT_VALIDITY}
+
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
+mail.smtp.host=smtp.gmail.com
+mail.smtp.port=587
+mail.username=${MAIL_USERNAME}
+mail.password=${MAIL_PASSWORD}
