aggiunta variabile d'ambiente OPEN_LINK

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ mail.smtp.host=smtp.gmail.com
 mail.smtp.port=587
 mail.username=${MAIL_USERNAME}
 mail.password=${MAIL_PASSWORD}
+
+environment.open.link=${OPEN_LINK}
